--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 				<a href=""><img src="img/3(1).png" alt=""></a>
 			</div>
 			<div class="fourblock">
-				<a href=""><img src="img/qqq.png" alt=""></a>
+				<a href="index2.html"><img src="img/qqq.png" alt=""></a>
 			</div>
 			<div class="right2">
 				<img src="img/phone.png" alt="">
@@ -280,43 +280,43 @@
 				<img src="img/loginB.jpg" alt="">
 			</div>
 			<div class="bottom2-right">
-				<p style="padding-top: 30px;padding-left: 65px;font-size: 15px;">购物指南</p>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">如何下单</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">帮5购流程</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">订单查询</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">物流配送</p></a>
+				<p  class="bp-1">购物指南</p>
+				<a href=""><p class="bp-2">如何下单</p></a>
+				<a href=""><p class="bp-2">帮5购流程</p></a>
+				<a href=""><p class="bp-2">订单查询</p></a>
+				<a href=""><p class="bp-2">物流配送</p></a>
 			</div>
 			<div class="bottom2-right">
-				<p style="padding-top: 30px;padding-left: 65px;font-size: 15px;">支付相关</p>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">支付方式</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">安全设置</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">账户信息</p></a>
+				<p class="bp-1">支付相关</p>
+				<a href=""><p class="bp-2">支付方式</p></a>
+				<a href=""><p class="bp-2">安全设置</p></a>
+				<a href=""><p class="bp-2">账户信息</p></a>
 			</div>
 			<div class="bottom2-right">
-				<p style="padding-top: 30px;padding-left: 65px;font-size: 15px;">售后服务</p>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">取消订单</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">申请售后</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">退货流程</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">退款相关</p></a>
+				<p class="bp-1">售后服务</p>
+				<a href=""><p class="bp-2">取消订单</p></a>
+				<a href=""><p class="bp-2">申请售后</p></a>
+				<a href=""><p class="bp-2">退货流程</p></a>
+				<a href=""><p class="bp-2">退款相关</p></a>
 			</div>
 			<div class="bottom2-right">
-				<p style="padding-top: 30px;padding-left: 65px;font-size: 15px;">VIP服务</p>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">VIP优惠</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">如何成为VIP</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">超级帮钻</p></a>
+				<p class="bp-1">VIP服务</p>
+				<a href=""><p class="bp-2">VIP优惠</p></a>
+				<a href=""><p class="bp-2">如何成为VIP</p></a>
+				<a href=""><p class="bp-2">超级帮钻</p></a>
 			</div>
 			<div class="bottom2-right">
-				<p style="padding-top: 30px;padding-left: 65px;font-size: 15px;">帮韩品</p>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">韩国正品</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">闪电发货</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">帮韩品售后</p></a>
+				<p class="bp-1">帮韩品</p>
+				<a href=""><p class="bp-2">韩国正品</p></a>
+				<a href=""><p class="bp-2">闪电发货</p></a>
+				<a href=""><p class="bp-2">帮韩品售后</p></a>
 			</div>
 			<div class="bottom2-right">
-				<p style="padding-top: 30px;padding-left: 65px;font-size: 15px;">更多</p>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">手机APP</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">帮5采APP</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">帮淘插件</p></a>
-				<a href=""><p style="padding-left: 65px;padding-top: 14px;font-size: 12px;color: #666560">其他</p></a>
+				<p class="bp-1">更多</p>
+				<a href=""><p class="bp-2">手机APP</p></a>
+				<a href=""><p class="bp-2">帮5采APP</p></a>
+				<a href=""><p class="bp-2">帮淘插件</p></a>
+				<a href=""><p class="bp-2">其他</p></a>
 			</div>
 			<img src="img/erweima.jpg" alt="" style="padding-top:30px;padding-left: 38px;  ">
 		</div>
@@ -350,12 +350,40 @@
 				<img src="img/bo6.png" alt="">
 				<img src="img/bo7.png" alt="">
 			</div>
-			
-		
-		
 		</div>
-
 	</div>
+	<!-- 隐藏侧边栏 -->
+	<div class="zixun">
+		<div class="zixun2" id="div2" onmouseover="move1()" onmouseout="move2()">
+			<img src="img/consult-s.png" alt="" style="display: block;float:left; ">
+			<img src="img/xiaobang.png" alt="" style="display: block;float:left; ">
+		</div>
+	</div>
+	<div class="youhuiquan">
+		<div class="youhuiquan2" id="div3" onmouseover="move3()" onmouseout="move4()">
+			<img src="img/youhui.png" alt="" style="display: block;float:left; ">
+			<p style="padding-top: 5px; float: right;">未登录</p>
+		</div>
+	</div>
+	<div class="erweima">
+		<div class="erweima2" id="div4" onmouseover="move5()" onmouseout="move6()">
+			<img src="img/app.png" alt="">
+			<img src="img/serwei.png" alt="" style="display: block;float:left; padding-top: 40px;padding-left: 11px; ">
+			<img src="img/erwei.png" alt="" style="float: right; top: 50px;left:45px;  position: absolute;">
+		</div>
+	</div>
+	<div class="gouwuche">
+		<div class="gouwuche2" id="div5" onmouseover="move7()" onmouseout="move8()">
+			<img src="img/cart.png" alt="" style="display: block;float:left; ">
+		</div>
+	</div>
+
+<!-- 	<div id="youhuiquan">
+		<img src="img/youhui.png" alt="" style="float: left; display: block;">
+	</div>
+	<div id="erweima">
+		<img src="img/erwei.png" alt="" style="float: right; display: block;">
+	</div> -->
 </body>
 <script src="animate.js"></script>
 <script src="Test.js"></script>
