--- a/index.html
+++ b/index.html
@@ -354,36 +354,29 @@
 	</div>
 	<!-- 隐藏侧边栏 -->
 	<div class="zixun">
-		<div class="zixun2" id="div2" onmouseover="move1()" onmouseout="move2()">
+		<div class="zixun2" id="div2" >
 			<img src="img/consult-s.png" alt="" style="display: block;float:left; ">
 			<img src="img/xiaobang.png" alt="" style="display: block;float:left; ">
 		</div>
 	</div>
 	<div class="youhuiquan">
-		<div class="youhuiquan2" id="div3" onmouseover="move3()" onmouseout="move4()">
+		<div class="youhuiquan2" id="div3" >
 			<img src="img/youhui.png" alt="" style="display: block;float:left; ">
 			<p style="padding-top: 5px; float: right;">未登录</p>
 		</div>
 	</div>
 	<div class="erweima">
-		<div class="erweima2" id="div4" onmouseover="move5()" onmouseout="move6()">
+		<div class="erweima2" id="div4">
 			<img src="img/app.png" alt="">
 			<img src="img/serwei.png" alt="" style="display: block;float:left; padding-top: 40px;padding-left: 11px; ">
 			<img src="img/erwei.png" alt="" style="float: right; top: 50px;left:45px;  position: absolute;">
 		</div>
 	</div>
 	<div class="gouwuche">
-		<div class="gouwuche2" id="div5" onmouseover="move7()" onmouseout="move8()">
+		<div class="gouwuche2" id="div5">
 			<img src="img/cart.png" alt="" style="display: block;float:left; ">
 		</div>
 	</div>
-
-<!-- 	<div id="youhuiquan">
-		<img src="img/youhui.png" alt="" style="float: left; display: block;">
-	</div>
-	<div id="erweima">
-		<img src="img/erwei.png" alt="" style="float: right; display: block;">
-	</div> -->
 </body>
 <script src="animate.js"></script>
 <script src="Test.js"></script>
