--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 		<div class="erweima2" id="div4">
 			<img src="img/app.png" alt="">
 			<img src="img/serwei.png" alt="" style="display: block;float:left; padding-top: 40px;padding-left: 11px; ">
-			<img src="img/erwei.png" alt="" style="float: right; top: 50px;left:45px;  position: absolute;">
+			<img id="i1" src="img/erwei.png" alt="" style="float: right; top: 50px;left:45px;  position: absolute;">
 		</div>
 	</div>
 	<div class="gouwuche">
