--- a/index2.html
+++ b/index2.html
@@ -109,8 +109,8 @@
 					
 					<div class="good-bottom" style="position: absolute;top: 408px;">
 						<img src="img/spanl.jpg" alt="" style="cursor: pointer;float: left;" onclick="clickleft()">
-						<div class="small-good1" id="sg1"><img src="img/sp0.jpeg" alt="" onclick="clickleft()"></div>
-						<div class="small-good2" id="sg2"><img src="img/sp1.jpeg" alt="" onclick="clickright()"></div>
+						<div class="small-good1" id="sg1"><img src="img/sp0.jpeg" alt="" onmouseover="clickleft()"></div>
+						<div class="small-good2" id="sg2"><img src="img/sp1.jpeg" alt="" onmouseover="clickright()"></div>
 						<img src="img/spanr.jpg" alt="" style="float: right;cursor: pointer;" onclick="clickright()">
 					</div>
 					<div id="img2">
