--- a/index2.html
+++ b/index2.html
@@ -260,7 +260,7 @@
 		<div class="buy-now" onclick="closed()">
 			<p>继续购物</p>
 		</div>
-		<div class="add-car">
+		<div class="add-car" onclick="closed()">
 			<p>去购物车结算</p>
 		</div>
 	</div>
