--- a/yingying/yingying.html
+++ b/yingying/yingying.html
@@ -35,7 +35,7 @@
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的莹莹，我在一起</font> <span class="STYLE1">已经……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的莹莹，我们在一起</font> <span class="STYLE1">已经……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
