--- a/yingying/yingying.html
+++ b/yingying/yingying.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>莹莹</title>
+<title>html5唯美爱情表白动画网页代码</title>
 <link type="text/css" rel="stylesheet" href="renxi/default.css">
 <script type="text/javascript" src="renxi/jquery.min.js"></script>
 <script type="text/javascript" src="renxi/jscex.min.js"></script>
@@ -35,7 +35,7 @@
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的莹莹，我们在一起</font> <span class="STYLE1">已经……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的莹莹，我在一起</font> <span class="STYLE1">已经……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
