--- a/yingying/yingying.html
+++ b/yingying/yingying.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>莹莹的网页哦！！</title>
+<title>莹莹的网页！！</title>
 <link type="text/css" rel="stylesheet" href="renxi/default.css">
 <script type="text/javascript" src="renxi/jquery.min.js"></script>
 <script type="text/javascript" src="renxi/jscex.min.js"></script>
@@ -16,7 +16,7 @@
 <style type="text/css">
 <!--
 .STYLE1 {
-	color: #666666
+    color: #666666
 }
 -->
 </style>
@@ -29,13 +29,12 @@
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000">
-        <p>
-       <span class="say">莹莹，爱你哦</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">莹莹，爱你哦</span><br>
+        </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的莹莹，我在一起</font> <span class="STYLE1">已经……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的，我们在一起</font> <span class="STYLE1">已经……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
@@ -46,7 +45,7 @@
 <script>
     (function(){
         var canvas = $('#canvas');
-		
+        
         if (!canvas[0].getContext) {
             $("#error").show();
             return false;        }
@@ -131,14 +130,14 @@
 
         var growAnimate = eval(Jscex.compile("async", function () {
             do {
-    	        tree.grow();
+                tree.grow();
                 $await(Jscex.Async.sleep(10));
             } while (tree.canGrow());
         }));
 
         var flowAnimate = eval(Jscex.compile("async", function () {
             do {
-    	        tree.flower(2);
+                tree.flower(2);
                 $await(Jscex.Async.sleep(10));
             } while (tree.canFlower());
         }));
@@ -170,14 +169,14 @@
         }));
 
         var textAnimate = eval(Jscex.compile("async", function () {
-		    var together = new Date();
-		    together.setFullYear(2016,12, 13); 			//时间年月日
-		    together.setHours(0);						//小时	
-		    together.setMinutes(0);					//分钟
-		    together.setSeconds(0);					//秒前一位
-		    together.setMilliseconds(0);				//秒第二位
+            var together = new Date();
+            together.setFullYear(2016,12,13);           //时间年月日
+            together.setHours(0);                       //小时    
+            together.setMinutes(0);                 //分钟
+            together.setSeconds(0);                 //秒前一位
+            together.setMilliseconds(0);                //秒第二位
 
-		    $("#code").show().typewriter();
+            $("#code").show().typewriter();
             $("#clock-box").fadeIn(500);
             while (true) {
                 timeElapse(together);
